Fix list alignments
* improve vertical alignment of checkbox
* Improve horizontal alignment of candidate picture column and heading
* make horizontal lines in left panel and under table aligned with the side panel collapse arrow
* Input placeholder color should be #929baa
* fix margin of left panel separator to align with right panel separator
* moved checkbox margin changes to checkbox cell

--- a/components/src/core/components/Input/_variables.scss
+++ b/components/src/core/components/Input/_variables.scss
@@ -6,6 +6,7 @@ $oxd-input-box-shadow--focus: $oxd-input-control-box-shadow--focus !default;
 $oxd-input-box-shadow--error: $oxd-input-control-box-shadow--error !default;
 $oxd-input-background--disabled: #f0f0f6 !default;
 $oxd-input-background: $oxd-white-color !default;
+$oxd-input-placeholder-color: $oxd-interface-gray-color !default;
 
 $oxd-file-input-horizontal-margin: 0.25rem !default;
 $oxd-file-input-background-color: $oxd-white-color !default;
