--- a/components/src/core/components/Input/checkbox-input.scss
+++ b/components/src/core/components/Input/checkbox-input.scss
@@ -11,6 +11,7 @@
     font-size: $oxd-input-control-font-size;
     font-weight: $oxd-input-control-font-weight;
     width: fit-content;
+    margin: 0;
 
     &:after {
       content: '';
